# dist-iter

./: .gitignore  Cargo.toml  README.md
dist-iter/: Cargo.toml
dist-iter/example-deps/: Cargo.toml
dist-iter/example-deps/src/: main.rs
dist-iter/examples/: custom_type.rs  example1.rs  filter.rs  map.rs  map_chunk.rs  readme-dist-iter.rs  readme-equivalence.rs  readme-multiple-adapters.rs  readme-provided-methods.rs  readme-std-iter.rs  reduce.rs
dist-iter/src/: dist_iter.rs  function_registry.rs  lib.rs  task.rs  uninit_buffer.rs  universe_guard.rs
dist-iter/src/function_registry/: mod.rs  registry.rs  task_id.rs
dist-iter/src/iter/: chunk_distributor.rs  dist_iterator.rs  filter.rs  for_each.rs  map.rs  map_chunk.rs  map_iter.rs  mod.rs  reduce.rs  uninit_buffer.rs
dist-iter/src/utils/: mod.rs
dist-iter/tests/: compile_fail.rs  mpiexec.rs  registry.rs
dist-iter/tests/compile_fail_tests/: mod.rs  task_macro_wrong_args.rs
dist-iter/tests/compile_fail_tests/chunk_size/: chunk_size_zero.rs  chunk_size_zero.stderr  mod.rs
dist-iter/tests/compile_fail_tests/method_macro_mismatch/: map_filter.rs  map_filter.stderr  map_filter_filter_syntax.rs  map_filter_map_syntax.rs  mod.rs
dist-iter/tests/compile_fail_tests/setup/: missing_setup_fn.rs  mod.rs  setup_fn_with_args.rs
dist-iter/tests/compile_fail_tests/task_macro_misuse/: map_chunk_into_iter_missing_chunk_size.rs  mod.rs  (+5 more)
dist-iter/tests/mpiexec_tests/: custom_type.rs  filter.rs  for_each.rs  map.rs  map_chunk.rs  mod.rs  multi_threaded.rs  reduce.rs  setup.rs
dist-iter/tests/utils/: term.rs
(+42 files in other folders)
