[package]
name = "dist-iter"
version = "0.1.0"
edition = "2021"

[dependencies]
dist-iter-macros = { path = "../dist-iter-macros" }

const-sha1 = "0.3.0"
linkme = "0.3.22"
mpi = { version = "0.7.0", features = ["derive", "user-operations"] }
tracing = "0.1.40"

[dev-dependencies]
trybuild2 = "1.2.0"
termcolor = "1.4.1"
